tests/typechecker/pass/023-let-rec-fun.hyg
let rec f: (int, int) -> int = fun(x: int, y: int) -> {
    x + y + (f(1, 1))
};
42
