tests/typechecker/fail/025-tuple-type-order-mismatch.hyg
let t: tuple {string, int, bool} = tuple {"Hello", true, 40 + 2}; ()
